@@ -54,6 +54,7 @@ Bug fixes
  * Prevent the footer and revisions link from unnecessarily collapsing on mobile (Jack Paine)
  * Empty searches were activated when paginating through images and documents (LB (Ben Johnston))
  * Summary numbers of pages, images and documents were not responsive when greater than 4 digits (Michael Palmer)
+ * Project template now has password validators enabled by default (Matt Westcott)
 
 
 Upgrade considerations
